proj1/testing/error/inputNoSetting.inp
DECODE THIS

* B Beta I II III AAAA (YZ) (AB)
DECODE THIS
